feat: add schema support and test setup with sample data seeds

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -3,5 +3,14 @@
   "extends": ["ultracite"],
   "javascript": {
     "globals": ["Bun"]
+  },
+  "linter": {
+    "rules": {
+      "suspicious": {
+        "noConsole": {
+          "level": "off"
+        }
+      }
+    }
   }
 }
