--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "types": ["bun"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
     "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
