--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,16 +17,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          bun-version: latest
+          node-version: latest
       
       - name: Install dependencies
-        run: bun install
+        run: npm install
       
       - name: Run tests
-        run: bun test
+        run: npm test
       
       - name: Publish to JSR
-        run: bunx jsr publish
+        run: npx jsr publish
