--- a/biome.jsonc
+++ b/biome.jsonc
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
   "extends": ["ultracite"],
   "javascript": {
-    "globals": ["Bun"]
+    "globals": ["node"]
   },
   "linter": {
     "rules": {
