--- a/package.json
+++ b/package.json
@@ -22,18 +22,23 @@
     "format": "npx ultracite format",
     "lint": "npx ultracite lint",
     "seed": "npx tsx seeds/setup.ts",
+    "build": "rm -rf dist && npx tsc",
+    "prepublishOnly": "npm run build",
     "test": "vitest",
     "test:watch": "npx test --watch",
     "test:docker": "docker compose -f tests/docker-compose.yml up -d --wait && npx tsx seeds/setup.ts && npm run vitest ./tests/docker-integration.spec.ts && docker compose -f tests/docker-compose.yml down"
   },
   "license": "MIT",
   "author": "Reflect",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "bin": {
-    "vsequel": "src/cli/index.ts"
+    "vsequel": "dist/cli/index.js"
   },
   "files": [
+    "dist/**/*.js",
+    "dist/**/*.d.ts",
+    "dist/**/*.js.map",
     "src/**/*.ts"
   ],
   "publishConfig": {
@@ -46,9 +51,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
     "@dotenvx/dotenvx": "^1.48.4",
-    "@types/bun": "latest",
     "@types/node": "^24.2.1",
-    "@types/react": "^19.1.11",
     "lefthook": "^1.12.2",
     "tsx": "^4.20.5",
     "ultracite": "5.1.2",
