--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,6 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "strictNullChecks": true
-  }
+  },
+  "include": ["src/**/*"]
 }
