--- a/package.json
+++ b/package.json
@@ -54,9 +54,14 @@
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
     "@dotenvx/dotenvx": "^1.48.4",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.5",
+    "@semantic-release/npm": "^12.0.2",
     "@tsconfig/recommended": "^1.0.10",
     "@types/node": "^24.2.1",
     "lefthook": "^1.12.2",
+    "semantic-release": "^24.2.7",
     "tsx": "^4.20.5",
     "ultracite": "5.1.2",
     "zod": "^3.24.1"
