feat: add safequery and direct plantuml generation from database service (#3)
* feat: add safequery method

* test: add more tests

* fix: mysql return of safe query on view

* fix: connection not being cleaned up

* docs: updated doc, added new safeQuery

* docs: added picture of sql salad on readme

* docs: add additional doc cli & library

* feat: generatePlantuml method in DatabaseService

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "seed": "npx tsx seeds/setup.ts",
     "build": "rm -rf dist && npx tsc",
     "prepublishOnly": "npm run build",
-    "test": "npx tsx --test $(find tests -name '*.spec.ts')",
-    "test:ee": "docker compose -f tests/docker-compose.yml up -d --wait && sleep 5 && npm run seed && npm test && docker compose -f tests/docker-compose.yml down",
-    "test:docker": "docker compose -f tests/docker-compose.yml up -d --wait && npx tsx seeds/setup.ts && npx tsx --test tests/docker-integration.spec.ts && docker compose -f tests/docker-compose.yml down"
+    "test": "npx tsx --test $(find src -name '*.spec.ts' 2>/dev/null || echo '')",
+    "test:ee": "docker compose -f test-ee/docker-compose.yml up -d --wait && npm run seed && npx tsx --test $(find test-ee -name '*.spec.ts') && docker compose -f test-ee/docker-compose.yml down",
+    "test:docker": "docker compose -f test-ee/docker-compose.yml up -d --wait && npx tsx seeds/setup.ts && npx tsx --test test-ee/docker-integration.spec.ts && docker compose -f test-ee/docker-compose.yml down"
   },
   "license": "MIT",
   "author": "vikyw89@gmail.com",
