feat: deprecated duplicated method, reorganize cli, add short options and flags
BREAKING CHANGE: deprecated method, reorganiza cli interface

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "access": "public"
   },
   "dependencies": {
+    "cmd-ts": "^0.14.1",
     "mysql2": "^3.14.3",
     "postgres": "^3.4.7"
   },
